--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ schedule>=1.1.0
 python-dateutil>=2.8.2
 pathlib>=1.0.1
 tqdm>=4.64.0
+beautifulsoup4>=4.11.0
+lxml>=4.9.0
+sqlalchemy>=2.0.0
+mysql-connector-python>=8.0.28
+argparse>=1.4.0
+concurrent-futures>=3.0.5
+multiprocessing>=0.70.14
