--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,10 @@ var/
 # Virtual environments
 venv/
 env/
+.venv/
 
 # Data directories
 data/
-
 # Logs
 logs/
 *.log
@@ -38,4 +38,5 @@ logs/
 .DS_Store
 
 # local files
-FinLens_progress_tracker.md
+notes/
+.vscode
