--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-requests>=2.28.0
+pydantic[email]>=1.9.0,<2.0.0
 python-dotenv>=0.20.0
-schedule>=1.1.0
-python-dateutil>=2.8.2
-pathlib>=1.0.1
-tqdm>=4.64.0
-beautifulsoup4>=4.11.0
-lxml>=4.9.0
-sqlalchemy>=2.0.0
-mysql-connector-python>=8.0.28
-argparse>=1.4.0
-concurrent-futures>=3.0.5
-multiprocessing>=0.70.14
+SQLAlchemy>=2.0.0
+mysql-connector-python>=8.0.0
+requests>=2.27.0
+beautifulsoup4>=4.10.0
+lxml>=4.8.0
