--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ env/
 
 # Data directories
 data/
+
 # Logs
 logs/
 *.log
@@ -40,3 +41,7 @@ logs/
 # local files
 notes/
 .vscode
+
+# src outputs
+tests/output/
+jpm_nodes_output.json
